<resources>
    <string name="app_name">ClubHub</string>

    <string name="title_clubs">Clubs</string>
    <string name="title_events">Events</string>
    <string name="title_id">ID</string>
    <string name="events_item_date_default">01/01/2019</string>
    <string name="event_item_name_default">Event Title</string>
    <string name="title_activity_club">ClubActivity</string>

    <string name="action_settings">Settings</string>
    <string name="official_member_name">Official/Member Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="rosefire">RoseFire</string>
    <string name="role">Role</string>

    <string name="email_domain">%s@rose-hulman.edu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_item_officials_title">Officials</string>
    <string name="tab_item_members_title">Members</string>
    <string name="tab_item_personal_title">Personal</string>
    <string name="tab_item_history_title">History</string>
    <string name="qr_code_of_current_user_description">QR Code of current user</string>
    <string name="club_title_default">Club Title</string>
    <string name="Event_description">Event Description</string>
    <string name="remind_me_about_the_event">Remind me about the event</string>
    <string name="action_qrcode_title">QR-Code</string>

    <string name="title_activity_bar_code">BarCodeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_logout">Logout</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="action_add_event">Add Event</string>
    <string name="action_export">Export Data</string>
    <string name="email_subject">Attendance Checkoff Export</string>
    <string name="hint_new_user_major">Major</string>
    <string name="hint_new_user_year">Year</string>
    <string name="hint_new_user_studentid">StudentID</string>
    <string name="hint_new_user_name">Name</string>
    <string name="hint_new_user_username">Username</string>
    <string name="event_time_text_default">CurrentTime</string>
    <string name="action_reminder">Set Reminder</string>

</resources>
