<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <EditText
            android:id="@+id/new_user_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_new_user_username"
            android:ems="10"/>
    <EditText
            android:id="@+id/new_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_new_user_name"
            android:ems="10"/>
    <EditText
            android:id="@+id/new_user_studentID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_new_user_studentid"
            android:ems="10"/>
    <EditText
            android:id="@+id/new_user_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_new_user_year"
            android:ems="10"/>
    <EditText
            android:id="@+id/new_user_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_new_user_major"
            android:ems="10"/>
</LinearLayout>