<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="edu.rosehulman.attendancecheckoff.club.ClubActivity">

    <item android:id="@+id/action_qrcode"
          android:title="@string/action_qrcode_title"
          android:icon="@drawable/ic_qrcode"
          android:orderInCategory="1"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_add_event"
          android:title="@string/action_add_event"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
