<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout
            android:id="@+id/event_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/event_toolbar"
                app:title="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_scrollFlags="scroll|enterAlways">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <TextView
            android:id="@+id/event_description"
            android:text="@string/event_description"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_margin="10dp"
            android:layout_below="@id/event_appbar"/>
    <CheckBox
            android:text="@string/remind_me_about_the_event"
            android:layout_below="@id/event_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/reminder"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/reminder">
    <android.support.v7.widget.RecyclerView
            android:id="@+id/attended_members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>
</RelativeLayout>